--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     <div id="nombre">
       <img id="logo" src="img/Logo.jpg">
     </div>
-    <nav id="botonera_principal">
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Teoría</a></li>
-          <li><a href="#">Prácticas</a></li>
-		  <li><a href="#">Ejercicios Resueltos</a></li>
-		  <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
-
+    <section class="menu-section" >
+        <nav class="botonera_principal menu">
+            <ul id="efecto">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#" >Teoría</a></li>
+            <li><a href="#" >Prácticas</a></li>
+            <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
+            <li><a href="contacto.html" >Contacto</a></li>
+            </ul>
+        </nav>
+    </section>
   </header>
 
     <section id="Inicio">
