--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="efecto">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="#" >Teoría</a></li>
-            <li><a href="#" >Prácticas</a></li>
+            <li><a href="practicas.html" >Prácticas</a></li>
             <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
             <li><a href="contacto.html" >Contacto</a></li>
             </ul>
