--- a/ejercicios.html
+++ b/ejercicios.html
@@ -18,7 +18,7 @@
             <ul id="efecto">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="#" >Teoría</a></li>
-            <li><a href="#" >Prácticas</a></li>
+            <li><a href="practicas.html" >Prácticas</a></li>
             <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
             <li><a href="contacto.html" >Contacto</a></li>
             </ul>
@@ -27,7 +27,7 @@
   </header>
 
     <section class="lyc" id="EJ">
-        <h1 class="tema">Lógica</h1>
+        <h1 class="tema padding-titulo"><font color="white">Lógica</font></h1>
 
         <div class="contenedor">
             <div class="video"><p class="ejernum">Ejercicio 7.c</p><video src="video/Ejercicio 7.c).mp4" controls></video></div>
@@ -45,7 +45,7 @@
         </div>
 
       
-        <h1 class="tema">Conjuntos</h1>
+        <h1 class="tema padding-titulo"><font color="white">Conjuntos</font></h1>
 
         <div class="contenedor">
           <div class="video"><p class="ejernum">Ejercicio 7.b</p><video src="video/Practica 2. Ejercicio 7.b).mp4" controls></video></div>
@@ -62,7 +62,7 @@
         <div class="ejerpdf"><a href="pdf/Ejercicio 10.pdf" target="_blank">Ejercicio 10</a></div>
       </div>
 
-      <h1 class="tema">Naturales y Combinatoria</h1>
+      <h1 class="tema padding-titulo"><font color="white">Naturales y Combinatoria</font></h1>
 
       <div class="contenedor">
         <div class="video"><p class="ejernum">Ejercicio 22</p><video src="video/Practica 4. Ejercicio 22..mp4" controls></video></div>
