--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link 
+    rel="stylesheet" 
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
+    crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 	<link rel="stylesheet" href="formulario.css">
 	<meta name="viewport" content="width=device-width , inital-scale=1" >
@@ -8,51 +13,58 @@
 </head>
 
 <body>
+	<header class="container-fluid">
 
-	<header>
-		<div id="nombre">
-		  <img id="logo" src="img/Logo.jpg">
-		</div>
-		<nav id="botonera_principal">
-			<ul>
-			  <li><a href="index.html">Inicio</a></li>
-			  <li><a href="#">Teoría</a></li>
-			  <li><a href="#">Prácticas</a></li>
-			  <li><a href="#">Ejercicios Resueltos</a></li>
-			  <li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		  </nav>
+			<div id="nombre">
+				<img id="logo" src="img/Logo.jpg">
+			  </div>
+			  <section class="menu-section" >
+				  <nav class="botonera_principal menu">
+					  <ul id="efecto">
+					  <li><a href="index.html">Inicio</a></li>
+					  <li><a href="#" >Teoría</a></li>
+					  <li><a href="practicas.html" >Prácticas</a></li>
+					  <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
+					  <li><a href="contacto.html" >Contacto</a></li>
+					  </ul>
+				  </nav>
+			  </section>
+	</header>
 	
-	  </header>
 	
 
 	<section id="Contacto">
+
+		<section class="color">
+			<div class="row m-2 justify-content-center">
+				<div class="col-xl-6 col-lg-6 col-xs-12">
+					<h2 class="text-center">Por cualquier consulta me podes escribir!</h2>
+					<form method="POST" action="#">
+						<div class="form-group">
+							<input autofocus type="text" class="form-control" placeholder="Nombre" required>
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Apellido" required>
+						</div>
+						<div class="form-group">
+							 <input type="email" class="form-control" placeholder="ejemplo@correo.com.ar" required>
+						</div>
+						<div class="form-group">
+							<textarea class="form-control" placeholder="Describe brevemente tu consulta aquí" maxlength="300" cols="30" rows="10"></textarea>
+						</div>
+						<button class="btn btn-outline-primary btn-block">Enviar</button>
+					</form>
+				</div>
+				<div class="col-xl-6 col-lg-6 col-xs-12 text-center">
+					<h3 class="text-center">Departamento de Matemática de la UNLP</h3>
+					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13087.96058379252!2d-57.95347833022458!3d-34.9066968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e640ad6b54a5%3A0x7c805a2c46e50eab!2sFacultad%20de%20Ciencias%20Exactas!5e0!3m2!1ses-419!2sar!4v1598989226627!5m2!1ses-419!2sar" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+				</div>
+			</div>
+		</section>
 	
-	  <p id="frase">Si tenés alguna consulta escribime!</p>
+	
+</div>
 
-	<div class="formulario">
-		<form action="enviar.php" method="post" >
-			<input autofocus type="text" placeholder="Nombre" name="nombre1" maxlength="20" required class="caja1" />
-       	 	<input type="text" placeholder="Apellido" name="apellido" maxlength="30" required class="caja1">
-			<input type="email" placeholder="Ejemplo@correo.com" name="correo" required class="caja1">
-			<input type="text" placeholder="Asunto" name="asunto" class="caja1">
-			<textarea name="mensaje" placeholder="Describe brevemente tu consulta aquí" maxlength="300" cols="30" rows="10" class="caja2"></textarea>
-			<br>
-			<button class="enviar">Enviar</button>
-		</form>
-
-	</div>
-
-<!---<ul class="fa-ul">
-  <li><i class="fa-li fa fa-check-square"></i>los iconos</li>
-  <li><i class="fa-li fa fa-check-square"></i>pueden usarse</li>
-  <li><i class="fa-li fa fa-spinner fa-spin"></i>como bullets</li>
-  <li><i class="fa-li fa fa-square"></i>en listas</li>
-</ul>--->
-	<div class="mapa">
-		<p class="frase2">Departamento de Matemática de la UNLP</p>
-		<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13087.96058379252!2d-57.95347833022458!3d-34.9066968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e640ad6b54a5%3A0x7c805a2c46e50eab!2sFacultad%20de%20Ciencias%20Exactas!5e0!3m2!1ses-419!2sar!4v1598989226627!5m2!1ses-419!2sar" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-	</div>
 </section>
 		
 </body>
