--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,8 @@
     rel="stylesheet" 
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
-    crossorigin="anonymous">
+	crossorigin="anonymous">
+	<meta charset="UTF-8">
 	<link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 	<link rel="stylesheet" href="formulario.css">
 	<meta name="viewport" content="width=device-width , inital-scale=1" >
@@ -22,7 +23,7 @@
 				  <nav class="botonera_principal menu">
 					  <ul id="efecto">
 					  <li><a href="index.html">Inicio</a></li>
-					  <li><a href="#" >Teoría</a></li>
+					  <li><a href="teoria.html" >Teoría</a></li>
 					  <li><a href="practicas.html" >Prácticas</a></li>
 					  <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
 					  <li><a href="contacto.html" >Contacto</a></li>
