--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="botonera_principal menu">
             <ul id="efecto">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#" >Teoría</a></li>
+            <li><a href="teoria.html" >Teoría</a></li>
             <li><a href="practicas.html" >Prácticas</a></li>
             <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
             <li><a href="contacto.html" >Contacto</a></li>
