--- a/practicas.html
+++ b/practicas.html
@@ -22,7 +22,7 @@
               <nav class="botonera_principal menu">
                   <ul id="efecto">
                   <li><a href="index.html">Inicio</a></li>
-                  <li><a href="#" >Teoría</a></li>
+                  <li><a href="teoria.html" >Teoría</a></li>
                   <li><a href="practicas.html" >Prácticas</a></li>
                   <li><a href="ejercicios.html">Ejercicios Resueltos</a></li>
                   <li><a href="contacto.html" >Contacto</a></li>
@@ -38,46 +38,57 @@
             </div>
         </div>        
 
-<div class="row mt-5 ml-5">
-    <div class="col-4">
+<div class="row m-3">
+    <div class="col-xl-4 col-lg-4 col-xs-12">
         <h3 class="text-center">Lógica proposicional</h3>
         <div>
-        <ul class="lista">
-            <li><a href="practicas/P1.pdf">Práctica 1</a></li>
-            <li><a href="practicas/O1.pdf">Observaciones de lógica</a></li>
-        </ul>
+            <div>
+                <a href="practicas/P1.pdf" target="_blank">Práctica 1</a></li>
+            </div>
+            <div>
+                <a href="practicas/O1.pdf" target="_blank">Observaciones de lógica</a></li>
+            </div>
     </div>
     </div>
-    <div class="col-4">
+    <div class="col-xl-4 col-lg-4 col-xs-12">
         <h3 class="text-center">Teoría de conjuntos</h3>
-        <ul class="lista">
-            <li><a href="practicas/P2.pdf">Práctica 2</a></li>
-            <li><a href="practicas/P3.pdf">Práctica 3</a></li>
-            <li><a href="practicas/O2.pdf">Observaciones sobre conjuntos</a></li>
-        </ul>
+            <div>
+                <a href="practicas/P2.pdf" target="_blank">Práctica 2</a></li>
+            </div>
+            <div>
+                <a href="practicas/P3.pdf" target="_blank">Práctica 3</a></li>
+            </div>
+            <div>
+                <a href="practicas/O2.pdf" target="_blank">Observaciones sobre conjuntos</a></li>
+            </div>
+        
     </div>
-    <div class="col-4">
+    <div class="col-xl-4 col-lg-4 col-xs-12">
         <h3 class="text-center">Naturales y Combinatoria</h3>
-        <ul class="lista">
-            <li><a href="practicas/P4.pdf">Práctica 4</a></li>
-            <li><a href="practicas/P5.pdf">Práctica 5</a></li>
-        </ul>
+            <div>
+                <a href="practicas/P4.pdf" target="_blank">Práctica 4</a></li>
+            </div>
+            <div>
+                <a href="practicas/P5.pdf" target="_blank">Práctica 5</a></li>
+            </div>
+       
     </div>
 </div>
 
 <footer>
-    <div id="datos">
-      <p id="links"><font color="white">Links de interés:</font> </p><br>
-      <a id="mate" href="http://www.mate.unlp.edu.ar/?s=cur2&c=44" target="_blank">Departamento de Matemática de la UNLP</a></p><br>
-      <a id="classroom" href="https://classroom.google.com/u/1/c/NjExMjczNTU1MDVa" target="_blank">Classroom Comisión M2</a>
-    </div>
-    <div id="redes">
-       <ul class="iconos">
-        <li><a href="https://www.linkedin.com/in/alvaradoclaudia/" id="linkedin" target="_blank"><i class="fab fa-linkedin fa-2x" style="color: #0e76a8;"></i></a></li>
-        <li><a href="https://www.facebook.com/clau.alv/" id="facebook" target="_blank"><i class="fab fa-facebook-square fa-2x" style="color: #1877f2"></i></a></li>
-        <li><a href="https://www.instagram.com/clau.alv/" id="instagram" target="_blank"><i class="fab fa-instagram fa-2x" style="color: #c03983af
-          "></i></a></li>
-      </ul>
+    <div class="row m-2 pb-2">
+        <div class="col-xl-8 col-lg-8 col-xs-12">
+            <p id="links"><font color="white">Links de interés:</font> </p><br>
+            <a id="mate" href="http://www.mate.unlp.edu.ar/?s=cur2&c=44" target="_blank">Departamento de Matemática de la UNLP</a></p><br>
+            <a id="classroom" href="https://classroom.google.com/u/1/c/NjExMjczNTU1MDVa" target="_blank">Classroom Comisión M2</a>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-xs-12 justify-content-end">
+            <ul class="iconos ">
+                <li><a href="https://www.linkedin.com/in/alvaradoclaudia/" id="linkedin" target="_blank"><i class="fab fa-linkedin fa-2x" style="color: #0e76a8;"></i></a></li>
+                <li><a href="https://www.facebook.com/clau.alv/" id="facebook" target="_blank"><i class="fab fa-facebook-square fa-2x" style="color: #1877f2"></i></a></li>
+                <li><a href="https://www.instagram.com/clau.alv/" id="instagram" target="_blank"><i class="fab fa-instagram fa-2x" style="color: #c03983af"></i></a></li>
+            </ul>
+        </div>
     </div>
   </footer>
 
