--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <header>
     <div id="nombre">
-      <img id="logo" src="img/Logo.jpg">
+      <img id="logo" class="img1" src="img/Logo.jpg">
     </div>
     <section class="menu-section" >
         <nav class="botonera_principal menu">
@@ -33,7 +33,7 @@
         </article>
     
       <article id="teoria_algebra">
-        <img id="venn" src="img/diagramavenn.jpg">
+        <img id="venn" class="img2" src="img/diagramavenn.jpg">
       </article>
       
       <div id="contenido_teorico">
@@ -41,8 +41,8 @@
 	  </div>
 	  
       <div id="programacion">
-        <img id="python" src="img/python.png">
-        <img id="sql" src="img/sql2.jpg">
+        <img id="python" class="img3" src="img/python.png">
+        <img id="sql" class="img3" src="img/sql2.jpg">
       </div>
       <aside id="complementario">
         <img id="imagen_aside" src="img/fondo4.jpg">
